Correct abstract title on narrow screens.

--- a/css/ogsdb.scss
+++ b/css/ogsdb.scss
@@ -203,6 +203,7 @@ body {
 	.field__label {
 		font-weight: bold;
 		font-size: 1.071em;
+		font-family: "Noto Sans",sans-serif;
 	}
 }
 
